Bug 1840746 - SVG patternTransform translate uses wrong units r=emilio, a=dsmith

Differential Revision: https://phabricator.services.mozilla.com/D182618